--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </head>
 <body>
     <h1 class="title">Consegue adivinhar o número secreto?</h1>
-    <h2 class="subtitle">O número secreto está entre <span id="lower-value">_</span> e <span id="higher-value">_</span></h2>
+    <h2 class="subtitle">O número secreto está entre <span id="lower-number">_</span> e <span id="higher-number">_</span></h2>
 
     <div id="attempt" class="container">
         <p class="text">Diga alguma coisa...</p>
         <span class="box">X</span>
         <p class="text">O número secreto é maior <span class="material-symbols-outlined">arrow_upward</span></p>
     </div>
+
+    <script src="js/createNumber.js"></script>
 </body>
 </html>
