reconhecimento de voz incluído

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
     <div id="attempt" class="container">
         <p class="text">Diga alguma coisa...</p>
-        <span class="box">X</span>
-        <p class="text">O número secreto é maior <span class="material-symbols-outlined">arrow_upward</span></p>
+        <!-- <span class="box">X</span>
+        <p class="text">O número secreto é maior <span class="material-symbols-outlined">arrow_upward</span></p> -->
     </div>
 
     <script src="js/createNumber.js"></script>
+    <script src="js/voiceRecognition.js"></script>
 </body>
 </html>
