--- a/index.html
+++ b/index.html
@@ -21,5 +21,6 @@
 
     <script src="js/createNumber.js"></script>
     <script src="js/voiceRecognition.js"></script>
+    <script src="js/validation.js"></script>
 </body>
 </html>
