funções de restart e fim de jogo adicionadas

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <h2 class="subtitle">O número secreto está entre <span id="lower-number">_</span> e <span id="higher-number">_</span></h2>
 
     <div id="attempt" class="container">
-        <p class="text">Diga alguma coisa...</p>
-        <!-- <span class="box">X</span>
-        <p class="text">O número secreto é maior <span class="material-symbols-outlined">arrow_upward</span></p> -->
+        <p class="text">Diga um número...</p>
     </div>
 
     <script src="js/createNumber.js"></script>
